fix img on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-.gem {
+/* .gem {
     border: 5px solid black;
-}
+} */
 
 body {
     background: #615D6C;
